[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
chrono = "0.4.22"
config = "0.13.2"
poem = { version = "1.3.40", features = ["test"] }
poem-openapi = { version = "2.0.11", features = ["swagger-ui"] }
rand = "0.8.5"
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["json"] }
tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
serial_test = "*"
