[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
config = "0.13.2"
poem = { version = "1.3.47", features = ["test"] }
poem-openapi = { version = "2.0.18", features = ["swagger-ui"] }
sea-orm = { version = "0.10.2", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
sea-orm-migration = "0.10.2"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6", default-features = false, features = ["postgres"] }
tokio = { version = "1.21.0", features = ["full"] }
tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.3"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.15", features = ["json", "env-filter", "std"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
serial_test = "*"
tracing-test = { version = "0.2.3", features = ["no-env-filter"] }

[profile.release]
strip = true
lto = true
