[package]
name = "zero2prod-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[[test]]
path = "tests/entry.rs"
name = "integration"

[dependencies]
anyhow = "1.0.66"
argon2 = "0.4.1"
base64 = "0.21.0"
chrono = "0.4.22"
config = "0.13.2"
poem = { version = "1.3.51", features = ["test"] }
poem-openapi = { version = "2.0.22", features = ["swagger-ui"] }
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
sea-orm-migration = "0.11.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
sqlx = { version = "0.6", default-features = false, features = ["postgres", "migrate"] }
thiserror = "1.0.38"
tokio = { version = "1.21.0", features = ["full"] }
tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.3"
tracing-subscriber = { version = "0.3.15", features = ["json", "env-filter", "std"] }
unicode-segmentation = "1.10.0"
uuid = { version = "1.3.0", features = ["v4"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
serial_test = "*"
wiremock = "0.5"
fake = "~2.3"
serde_json = "1.0"
linkify = "0.9.0"
once_cell = "1.16.0"
migration = { path = "./migration" }

[profile.release]
strip = true
lto = true
